assets/style.css
body {
    font-family: 'Kumbh Sans', sans-serif;
}

.searchBar {
    width: 400px;
    margin: 0px;
    padding-top: 100px;
}

.locationName {
    margin-top: 50px;
}

.container {
    height: 1000px;
    width: 1000px;
    padding-top: 50px;
    padding-bottom: 200px;
}

.card {
    width: 150px;
}

/* Small devices (landscape phones, less than 768px) imported from https://getbootstrap.com/docs/5.0/layout/breakpoints/#max-width */
@media (max-width: 767.98px) {
    .h-60 {
        height: 380px;
        width: 300px;
    }
    .card-img-top {
        height: 100px;
        width: 300px;
    }
    .col {
        padding-bottom: 10px;
    }
}

